[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/DialogGraph/Scenes/Nodes/DialogueNode.gd" type="Script" id=1]
[ext_resource path="res://addons/DialogGraph/font/Nunito-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
extra_spacing_top = -12
extra_spacing_bottom = -10
font_data = ExtResource( 2 )

[node name="DialogueNode" type="GraphNode"]
margin_right = 192.0
margin_bottom = 199.0
rect_min_size = Vector2( 140, 120 )
custom_constants/separation = 4
title = "DialogueNode"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 49.0

[node name="add_option" type="Button" parent="HBoxContainer2"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "+"
icon_align = 1

[node name="minus_option" type="Button" parent="HBoxContainer2"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "-"
icon_align = 1

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_left = 58.0
margin_top = 5.0
margin_right = 109.0
margin_bottom = 19.0
text = "Options"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
margin_left = 113.0
margin_right = 160.0
margin_bottom = 25.0
size_flags_horizontal = 3
alignment = 2

[node name="run" type="Button" parent="HBoxContainer2/HBoxContainer"]
margin_left = 14.0
margin_right = 47.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
text = "run"

[node name="Option1" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 176.0
margin_bottom = 77.0
size_flags_horizontal = 3
placeholder_text = "Option 1"

[node name="Option2" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 81.0
margin_right = 176.0
margin_bottom = 105.0
size_flags_horizontal = 3
placeholder_text = "Option 2"

[node name="Option3" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 109.0
margin_right = 176.0
margin_bottom = 133.0
size_flags_horizontal = 3
placeholder_text = "Option 3"

[node name="Option4" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 137.0
margin_right = 176.0
margin_bottom = 161.0
size_flags_horizontal = 3
placeholder_text = "Option 4"

[node name="Speaker" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 165.0
margin_right = 176.0
margin_bottom = 189.0
size_flags_horizontal = 3
placeholder_text = "Speaker"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 193.0
margin_right = 176.0
margin_bottom = 193.0
hint_tooltip = "The dialogue displayed in the DialogueBox.
Use [bbcodes] to add extra effects to your dialogue."
size_flags_vertical = 3
syntax_highlighting = true
highlight_all_occurrences = true
wrap_enabled = true
caret_blink = true

[connection signal="resize_request" from="." to="." method="_on_DialogueNode_resize_request"]
[connection signal="pressed" from="HBoxContainer2/add_option" to="." method="_on_add_option_pressed"]
[connection signal="pressed" from="HBoxContainer2/minus_option" to="." method="_on_minus_option_pressed"]
[connection signal="pressed" from="HBoxContainer2/HBoxContainer/run" to="." method="_on_run_pressed"]
[connection signal="focus_exited" from="Option1" to="." method="_on_focus_exited"]
[connection signal="focus_exited" from="Option2" to="." method="_on_focus_exited"]
[connection signal="focus_exited" from="Option3" to="." method="_on_focus_exited"]
[connection signal="focus_exited" from="Option4" to="." method="_on_focus_exited"]
[connection signal="focus_exited" from="Speaker" to="." method="_on_focus_exited"]
[connection signal="focus_exited" from="TextEdit" to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="TextEdit" to="." method="_on_TextEdit_mouse_entered"]
[connection signal="mouse_exited" from="TextEdit" to="." method="_on_TextEdit_mouse_exited"]
